# spotifycharts

./: PKG-INFO  README.rst  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
.github/: workflow.yml
.github/workflows/: .yml  main.yml  python-publish.yml  test.yml  workflow.yml
spotifycharts/: __init__.py  classes.py  configuration.env  logging.py  settings.py
tests/: test_chartdownloader.py  test_download_dates.py  test_download_regions.py
tests/test_chartdownloader/tested/spotify_charts/top200/daily/france/: top200_daily_charts_from_2019-12-30_to_2020-01-05.csv
tests/test_chartdownloader/tested/spotify_charts/top200/daily/germany/: top200_daily_charts_from_2019-12-30_to_2020-01-05.csv
tests/test_chartdownloader/tested/spotify_charts/top200/daily/global/: top200_daily_charts_from_2019-12-30_to_2020-01-08.csv
tests/test_chartdownloader/tested/spotify_charts/top200/weekly/france/: top200_weekly_charts_from_2019-12-30_to_2020-01-05.csv
tests/test_download_dates/tested/top200/daily/: top200_daily_france_dates.csv  top200_daily_global_dates.csv
tests/test_download_dates/tested/top200/weekly/: top200_weekly_france_dates.csv  top200_weekly_global_dates.csv
tests/test_download_dates/tested/viral50/daily/: viral50_daily_france_dates.csv  viral50_daily_global_dates.csv
tests/test_download_dates/tested/viral50/weekly/: viral50_weekly_france_dates.csv  viral50_weekly_global_dates.csv
tests/test_download_regions/tested/top200/: top200_regions.csv
(+8 files in other folders)
