[tool.poetry]
name = "spotifycharts"
version = "2021.02.22"
description = "The easy-to-use package for downloading Spotify charts with Python."
authors = ["Arthur Meltonyan <arthur.meltonyan@gmail.com>"]
maintainers = ["Arthur Meltonyan <arthur.meltonyan@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/arthurmeltonyan/spotifycharts"
repository = "https://github.com/arthurmeltonyan/spotifycharts"
keywords = ["download",
            "spotify",
            "charts",
            "music"]
classifiers = ["Programming Language :: Python :: 3 :: Only",
               "Topic :: Internet",
               "Topic :: Software Development :: Build Tools",
               "Topic :: Software Development :: Libraries",
               "Topic :: Software Development :: Libraries :: Python Modules"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pendulum = "^2.1.2"
pandas = "^1.2.2"
tqdm = "^4.57.0"
loguru = "^0.5.3"
beautifulsoup4 = "^4.9.3"
environs = "^9.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
dephell = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
